; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_read_session.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssltest_old.c_read_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@bio_err = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"Can't open session file %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"Can't parse session file %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @read_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_session(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @BIO_new_file(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @bio_err, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @BIO_printf(i32 %11, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8* %12)
  %14 = load i32, i32* @bio_err, align 4
  %15 = call i32 @ERR_print_errors(i32 %14)
  store i32* null, i32** %2, align 8
  br label %31

16:                                               ; preds = %1
  %17 = load i32*, i32** %5, align 8
  %18 = call i32* @PEM_read_bio_SSL_SESSION(i32* %17, i32* null, i32 0, i32* null)
  store i32* %18, i32** %4, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %16
  %22 = load i32, i32* @bio_err, align 4
  %23 = load i8*, i8** %3, align 8
  %24 = call i32 @BIO_printf(i32 %22, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i8* %23)
  %25 = load i32, i32* @bio_err, align 4
  %26 = call i32 @ERR_print_errors(i32 %25)
  br label %27

27:                                               ; preds = %21, %16
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @BIO_free(i32* %28)
  %30 = load i32*, i32** %4, align 8
  store i32* %30, i32** %2, align 8
  br label %31

31:                                               ; preds = %27, %10
  %32 = load i32*, i32** %2, align 8
  ret i32* %32
}

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1

declare dso_local i32 @ERR_print_errors(i32) #1

declare dso_local i32* @PEM_read_bio_SSL_SESSION(i32*, i32*, i32, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
